# CSC417Final

./: CMakeLists.txt  README.md  main.cpp
include/: particle.h  sim_data.h  simulate.h
src/: sim_data.cpp  simulate.cpp  tests.cpp
